--- a/account-service/package.json
+++ b/account-service/package.json
@@ -2,10 +2,11 @@
   "name": "account-service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p tsconfig.json",
+    "dev": "nodemon ./index.ts",
     "start": "node ./build/index.js"
   },
   "keywords": [],
@@ -16,6 +17,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.11",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
