--- a/account-service/package.json
+++ b/account-service/package.json
@@ -13,12 +13,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.13.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "fastify": "^4.27.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.12.11",
     "nodemon": "^3.1.0",
+    "prisma": "^5.13.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
