--- a/account-service/package.json
+++ b/account-service/package.json
@@ -16,8 +16,11 @@
     "@joggr/fastify-prisma": "^2.0.1",
     "@prisma/client": "^5.13.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "fastify": "^4.27.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
